# graphviz

./: .gitignore  .gitlab-ci-local-variables.yml  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPERS.md  Doxyfile.in  Makefile.am  README.md  autogen.sh  config-cmake.h.in  configure.ac  gen_version.py  graphviz_version.h.in  merged.yml  pyproject.toml  renovate.json5  requirements.txt
.gitlab/issue_templates/: Default.md
ci/: build.sh  clang_format.py  cygwin-build.sh  cygwin-install.ps1  deploy.py  generate_configuration_table.py  install-packages.sh  linux-build-job-script.sh  linux-test-including-ctest-job-script.sh  linux-test-job-script.sh  macos-install-build-dependencies.sh  macos-install-runtime-dependencies.sh  make_relocatable.py  mingw-build.sh  mingw-install.sh  mingw-test.sh  network-diag-logic.ps1  out-of-source-build.sh  pages.sh  test-job-script.sh  test_coverage.py  tests.py  windows_build.py
ci/fedora40/: Dockerfile
ci/fedora41/: Dockerfile
ci/fedora42/: Dockerfile
ci/fedora43/: Dockerfile
ci/rocky10/: Dockerfile
ci/rocky8/: Dockerfile
ci/rocky9/: Dockerfile
ci/ubuntu-20.04/: Dockerfile
ci/ubuntu-22.04/: Dockerfile
ci/ubuntu-24.04/: Dockerfile
ci/ubuntu-24.10/: Dockerfile
ci/ubuntu-25.04/: Dockerfile
ci/ubuntu-25.10/: Dockerfile
cmake/: FindGD.cmake  FindGTS.cmake  FindPangoCairo.cmake  cmake_uninstall.cmake.in  config_checks.cmake  configure_plugins.cmake.in  package_info.cmake
cmd/dot/: CMakeLists.txt  Makefile.am  dot.c  dot_builtins.cpp  no_builtins.c
cmd/edgepaint/: edgepaintmain.c
cmd/gvedit/: csettings.cpp  csettings.h  imageviewer.cpp  imageviewer.h  main.cpp  mainwindow.cpp  mainwindow.h  mdichild.cpp  mdichild.h
cmd/gvmap/: CMakeLists.txt  Makefile.am  cluster.c  country_graph_coloring.c  country_graph_coloring.h  gvmap.c  make_map.c  make_map.h  power.c  power.h
cmd/gvpr/: CMakeLists.txt  Makefile.am  gvprmain.c
cmd/mingle/: minglemain.cpp
cmd/smyrna/: CMakeLists.txt  Makefile.am  arcball.c  arcball.h  draw.c  draw.h  glexpose.c  glexpose.h  glmotion.c  glmotion.h  gltemplate.c  gltemplate.h  glutrender.c  gvprpipe.c  gvprpipe.h  hier.c  hier.h  hotkeymap.c  hotkeymap.h  main.c  polytess.c  polytess.h  selectionfuncs.c  selectionfuncs.h  smyrna_utils.c  smyrna_utils.h  smyrnadefs.h  topfisheyeview.c  topfisheyeview.h  topviewfuncs.c  topviewfuncs.h  tvnodes.c  tvnodes.h  viewport.c  viewport.h  viewportcamera.c  viewportcamera.h
cmd/tools/: CMakeLists.txt  Makefile.am  acyclic.c  bcomps.c  ccomps.c  colortbl.h  colxlate.c  convert.h  cvtgxl.c  dijkstra.c  gc.c  gml2gv.c  gml2gv.h  gmlparse.y  graph_generator.c  graph_generator.h  gv2gml.c  (+15 more)
contrib/: gprof2dot.awk
contrib/prune/: CMakeLists.txt  Makefile.am  prune.c
debian/: TODO  control  copyright  graphviz.install.in  libgraphviz4.lintian-overrides  rules
dot.demo/: demo.c  dot.c  neatopack.c  simple.c
lib/: CMakeLists.txt  Makefile.am  graphvizConfig.cmake
lib/neatogen/: CMakeLists.txt  Makefile.am  adjust.c  adjust.h  bfs.c  bfs.h  call_tri.c  call_tri.h  circuit.c  closest.c  closest.h  compute_hierarchy.c  conjgrad.c  conjgrad.h  constrained_majorization.c  constrained_majorization_ipsep.c  constraint.c  defs.h  delaunay.c  delaunay.h  digcola.h  dijkstra.c  dijkstra.h  edges.c  edges.h  embed_graph.c  embed_graph.h  fPQ.h  geometry.c  geometry.h  heap.c  heap.h  hedges.c  hedges.h  info.c  info.h  kkutils.c  kkutils.h  legal.c  lu.c  (+36 more)
lib/ortho/: CMakeLists.txt  fPQ.c  fPQ.h  maze.c  maze.h  ortho.c  ortho.h  partition.c  rawgraph.c  rawgraph.h  sgraph.c  sgraph.h  structures.h  trap.h  trapezoid.c
lib/twopigen/: CMakeLists.txt  circle.c  circle.h  twopiinit.c
lib/util/: CMakeLists.txt  Makefile.am  agxbuf.h  alloc.h  api.h  arena.c  base64.c  bitarray.h  debug.c  debug.h  dword.c  dword.h  gv_find_me.c  gv_math.h  gv_stack-private.h  gv_stack.c  gv_stack.h  gv_time.h  hazard.c  hazard.h  list-private.h  list.c  list.h  mt_stack.c  mt_stack.h  mutex-c11.c  mutex-cxx.cc  mutex-no.c  mutex-posix.c  mutex-pthread.c  mutex.h  optional.h  overflow.h  prisize_t.h  random.c  random.h  test_arena.c  test_debug.c  test_dword.c  test_gv_stack.c  (+6 more)
m4/: README
macosx/: GVApplicationDelegate.h  GVApplicationDelegate.m  GVAttributeInspectorController.h  GVAttributeInspectorController.m  GVAttributeSchema.h  GVAttributeSchema.m  GVDocument.h  GVDocument.m  GVExportViewController.h  GVExportViewController.m  GVFileNotificationCenter.h  GVFileNotificationCenter.m  GVGraphArguments.h  GVGraphArguments.m  GVGraphDefaultAttributes.h  GVGraphDefaultAttributes.m  GVWindowController.h  GVWindowController.m  GVZGraph.h  GVZGraph.m  graphviz_prefix.pch  main.m
plugin/dot_layout/: CMakeLists.txt  Makefile.am  gvlayout_dot_layout.c
plugin/gdk/: CMakeLists.txt  gvdevice_gdk.c  gvloadimage_gdk.c  gvplugin_gdk.c
plugin/lasi/: CMakeLists.txt  gvloadimage_lasi.cpp  gvplugin_lasi.c  gvrender_lasi.cpp
plugin/neato_layout/: CMakeLists.txt  gvlayout_neato_layout.c  gvplugin_neato_layout.c
plugin/poppler/: CMakeLists.txt  gvloadimage_poppler.c  gvplugin_poppler.c
plugin/quartz/: CMakeLists.txt  GVTextLayout.h  GVTextLayout.m  Makefile.am  gvdevice_quartz.c  gvloadimage_quartz.c  gvplugin_quartz.c  gvplugin_quartz.h  gvrender_quartz.c  gvtextlayout_quartz.c
plugin/rsvg/: CMakeLists.txt  gvloadimage_rsvg.c  gvplugin_rsvg.c
plugin/vt/: CMakeLists.txt  gvplugin_vt.c
redhat/: graphviz.spec.fedora.in
tests/: 1172_1.xdot  1172_2.xdot  1541.dot  1581.dot  2108.dot  2331.c  2356.c  2623_ABX.dot  2623_badDir5.dot  2623_multiEdges0.dot  2641.c  2648.c  2705.c  2716.c  2727.dot  2734.dot  CMakeLists.txt  Makefile.am  agxbuf-print-nul.c  cl.py  compare_performance.py  fonts.conf  graphviz_edge.cpp  gvtest.py  mm-cmplx.mm  svg_analyzer.cpp  svg_element.cpp  test_c_utils.py  test_clusters.cpp  test_edge_node_overlap_normal_and_inv_edge_arrows_all_modifiers.cpp  test_examples.py  test_gv_find_me.c  test_misc.py  test_regression.py  test_rtest.py  test_tools.py  test_vmalloc.py
tests/2598/: CMakeLists.txt
tests/2798/: CMakeLists.txt
(+452 files in other folders)
