[project]
name = "graphviz"
version = "0.1.0"
# description = "Add your description here"
# readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "black==24.8.0",
    "cmakelang==0.6.13",
    "isort==5.13.2",
    "pexpect==4.9.0",
    "pillow==10.4.0",
    "pygments==2.18.0",
    "pylint==3.2.7",
    "pytest==8.3.5",
]
